add the logic of api